--- a/mushroom_frontend/package.json
+++ b/mushroom_frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-heart": "^1.0.6",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.1",
